--- a/CSS/global.css
+++ b/CSS/global.css
@@ -15,7 +15,7 @@ h3 {
 h4 {
   font-size: 1.5rem !important;
 }
-.container {
-  width: 100%;
+/* .container {
+  width: 1280px;
   margin: 0px 80px 0px 80px !important;
-}
+} */
