--- a/CSS/index.css
+++ b/CSS/index.css
@@ -78,8 +78,17 @@
 }
 .hero-img {
   height: 478px;
-  position: relative;
-  top: -48px;
+  position: absolute;
+  top: 189px;
   /* right: 30px; */
 }
 /* Hero section  */
+.sponser {
+  width: 100%;
+  height: 128px;
+  background-color: #f1f5f9;
+}
+.sponsor-img {
+  margin-right: 40px;
+  margin-left: 40px;
+}
