--- a/CSS/index.css
+++ b/CSS/index.css
@@ -92,3 +92,33 @@
   margin-right: 40px;
   margin-left: 40px;
 }
+.marquee-container {
+  width: 100%;
+  overflow: hidden;
+  white-space: nowrap;
+  background-color: #f1f1f1;
+}
+
+.marquee {
+  display: inline-block;
+  animation: marquee 10s linear infinite;
+}
+
+.sponsor-img {
+  display: inline-block;
+  padding: 10px;
+  transition: transform 0.3s ease-in-out;
+}
+
+.sponsor-img:hover {
+  transform: scale(1.3);
+}
+
+@keyframes marquee {
+  0% {
+    transform: translateX(10%);
+  }
+  100% {
+    transform: translateX(-10%);
+  }
+}
