--- a/CSS/index.css
+++ b/CSS/index.css
@@ -111,7 +111,15 @@
 }
 
 .sponsor-img:hover {
-  transform: scale(1.3);
+  transform: scale(1.1);
+}
+.sponsor-img-categories {
+  display: inline-block;
+  /* padding: 10px; */
+  transition: transform 0.3s ease-in-out;
+}
+.sponsor-img-categories:hover {
+  transform: scale(1.1);
 }
 
 @keyframes marquee {
@@ -122,3 +130,24 @@
     transform: translateX(-10%);
   }
 }
+
+/* <!-- Featured art category  --> */
+.featured-art-category {
+  width: 100%;
+  height: 586px;
+  background-color: #ffffff;
+}
+.categories {
+  color: #2563eb;
+  cursor: pointer;
+}
+.featured-art-category {
+  padding: 80px;
+}
+.content-img:hover {
+  transform: scale(1.1);
+}
+.content-img {
+  transition: transform 0.3s ease-in-out;
+}
+/* <!-- Featured art category  --> */
