--- a/CSS/index.css
+++ b/CSS/index.css
@@ -136,13 +136,11 @@
   width: 100%;
   height: 586px;
   background-color: #ffffff;
+  padding: 80px;
 }
 .categories {
   color: #2563eb;
   cursor: pointer;
-}
-.featured-art-category {
-  padding: 80px;
 }
 .content-img:hover {
   transform: scale(1.1);
@@ -151,3 +149,98 @@
   transition: transform 0.3s ease-in-out;
 }
 /* <!-- Featured art category  --> */
+
+/* Last master piece */
+.last-masterpiece {
+  height: 532px;
+  width: 100%;
+  background-color: #f1f5f9;
+  padding: 80px;
+}
+
+#slider-container {
+  height: 300px;
+  width: 85vw;
+  max-width: 1400px;
+  position: relative;
+  overflow: hidden;
+  padding: 20px;
+}
+
+#slider-container .btn {
+  position: absolute;
+  top: calc(50% - 30px);
+  height: 30px;
+  width: 30px;
+  border-left: 5px solid gray;
+  border-top: 5px solid gray;
+}
+
+#slider-container .btn:hover {
+  transform: scale(1.2);
+}
+
+#slider-container .btn.inactive {
+  border-color: rgb(153, 121, 126);
+}
+
+#slider-container .btn:first-of-type {
+  transform: rotate(-45deg);
+  left: 10px;
+}
+
+#slider-container .btn:last-of-type {
+  transform: rotate(135deg);
+  right: 10px;
+}
+
+#slider-container #slider {
+  display: flex;
+  width: 1000%;
+  height: 100%;
+  transition: all 0.5s;
+}
+
+#slider-container #slider .slide {
+  height: 300px;
+  width: 300px;
+  margin: auto 10px;
+  background-color: #ffffff;
+  /* box-shadow: 2px 2px 4px 2px white, -2px -2px 4px 2px white; */
+  display: grid;
+  place-items: center;
+}
+
+#slider-container #slider .slide span {
+  color: white;
+  font-size: 150px;
+}
+
+@media only screen and (min-width: 1100px) {
+  #slider-container #slider .slide {
+    width: calc(2.5% - 20px);
+  }
+}
+
+@media only screen and (max-width: 1100px) {
+  #slider-container #slider .slide {
+    width: calc(3.3333333% - 20px);
+  }
+}
+
+@media only screen and (max-width: 900px) {
+  #slider-container #slider .slide {
+    width: calc(5% - 20px);
+  }
+}
+
+@media only screen and (max-width: 550px) {
+  #slider-container #slider .slide {
+    width: calc(10% - 20px);
+  }
+}
+.slide-img {
+  height: 200px;
+  margin-bottom: 110px !important;
+}
+/* Last master piece */
