--- a/CSS/index.css
+++ b/CSS/index.css
@@ -252,4 +252,20 @@
   height: 522px;
   padding: 80px;
 }
+.sponsor-img-expanding {
+  display: inline-block;
+  padding: 10px;
+  transition: transform 0.3s ease-in-out;
+}
+.sponsor-img-expanding:hover {
+  transform: scale(1.1);
+}
+.find-service-btn {
+  background-color: #be123c;
+  padding: 12px;
+  border: none;
+  border-radius: 5px;
+  margin: 0 auto 0 auto;
+}
+
 /* Expanding Services  */
