--- a/CSS/index.css
+++ b/CSS/index.css
@@ -269,3 +269,22 @@
 }
 
 /* Expanding Services  */
+
+/* Best solution  */
+.best-solution {
+  width: 100%;
+  height: 557px;
+  padding: 80px;
+  background-color: #475569;
+}
+.explore-xinder-button {
+  background-color: transparent;
+  padding: 16px 32px 16px 32px;
+  border: none;
+  border-radius: 5px;
+  margin: 0 auto 0 auto;
+  color: #ffff;
+  border: 1px solid white;
+  margin-top: 24px;
+}
+/* Best solution  */
