art gal created

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -288,3 +288,12 @@
   margin-top: 24px;
 }
 /* Best solution  */
+
+/* Art gal  */
+.art-gal {
+  height: 544px;
+  width: 100%;
+  padding: 80px;
+  background-color: #f1f5f9;
+}
+/* Art gal  */
