--- a/CSS/index.css
+++ b/CSS/index.css
@@ -297,3 +297,12 @@
   background-color: #f1f5f9;
 }
 /* Art gal  */
+
+/* Art events  */
+.art-events {
+  width: 100%;
+  height: 584px;
+  background-color: #ffffff;
+  padding: 80px;
+}
+/* Art events  */
