--- a/CSS/index.css
+++ b/CSS/index.css
@@ -306,3 +306,12 @@
   padding: 80px;
 }
 /* Art events  */
+
+/* Add more  */
+.add-more {
+  height: 560px;
+  width: 100%;
+  padding: 80px;
+  background-color: #0f172a;
+}
+/* Add more  */
