--- a/CSS/index.css
+++ b/CSS/index.css
@@ -205,8 +205,6 @@
   height: 300px;
   width: 300px;
   margin: auto 10px;
-  background-color: #ffffff;
-  /* box-shadow: 2px 2px 4px 2px white, -2px -2px 4px 2px white; */
   border-radius: 10;
   display: grid;
   place-items: center;
@@ -315,3 +313,22 @@
   background-color: #0f172a;
 }
 /* Add more  */
+
+/* footer  */
+.footer {
+  height: 622px;
+  width: 100%;
+  background-color: #ffffff;
+}
+.list {
+  padding: 48px 0px 48px 0px;
+}
+.foot-li {
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 22.4px;
+  color: #475569;
+  padding: 12px 0px 12px 0px;
+}
+/* footer  */
