be incredible section created

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -332,3 +332,12 @@
   padding: 12px 0px 12px 0px;
 }
 /* footer  */
+
+/* be incredible  */
+.be-incredible {
+  height: 436px;
+  width: 100%;
+  padding: 80px;
+  background-color: #475569;
+}
+/* be incredible  */
