--- a/CSS/index.css
+++ b/CSS/index.css
@@ -344,3 +344,18 @@
 .hover {
   cursor: pointer;
 }
+/* 
+.slider-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.slider-card {
+  width: 180px;
+  height: 300px;
+  transition: all 0.3s;
+}
+.slider-card.active {
+  width: 300px;
+  height: 300px;
+} */
