--- a/CSS/index.css
+++ b/CSS/index.css
@@ -14,6 +14,9 @@
 .nav-link {
   color: #ffff !important;
 }
+.nav-btn:hover {
+  background-color: rgb(190, 18, 60);
+}
 .nav-item {
   font-size: 16px !important;
   font-weight: 500 !important;
@@ -22,6 +25,7 @@
   color: #ffff !important;
 }
 .nav-btn {
+  transition: background-color 0.3s;
   border: 2px solid white;
   border-radius: 5px;
   background-color: transparent;
