--- a/CSS/index.css
+++ b/CSS/index.css
@@ -60,15 +60,22 @@
   padding: 12px 20px 12px 45px;
   margin-right: 16px;
 }
-.hero-inpput-btn {
+.hero-input-btn {
   background-color: #be123c;
   padding: 12px;
   border: none;
   border-radius: 5px;
+  transition: background-color 0.3s;
+  color: #ffff;
 }
+.hero-input-btn:hover {
+  background-color: white;
+  color: #be123c;
+  font-weight: 700;
+}
+
 .search-text {
   padding: 0px 16px 0px 16px;
-  color: #ffff;
   line-height: 24px;
 }
 .option-text {
