media query added for all screens

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -373,6 +373,12 @@
 .hover {
   cursor: pointer;
 }
+.foot-li {
+  transition: ease 0.3s;
+}
+.foot-li:hover {
+  color: rgb(190, 18, 60);
+}
 /* 
 .slider-container {
   display: flex;
