--- a/CSS/media.css
+++ b/CSS/media.css
@@ -1,22 +1,114 @@
 /* // X-Small devices (portrait phones, less than 576px) */
 @media (min-width: 300px) and (max-width: 575.98px) {
+  .hide-xs {
+    display: none;
+  }
+  .header {
+    height: auto;
+    width: 100%;
+    background-color: #881337;
+  }
+  .header {
+    height: auto;
+    width: 100%;
+    background-color: #881337;
+  }
+  .hero-section {
+    margin-top: 52.5px;
+    /* margin-bottom: 66.5px; */
+    width: 100%;
+    padding-bottom: 50px;
+  }
+
+  h1 {
+    font-size: 40px !important;
+    line-height: 40px !important;
+    text-align: center;
+  }
+  .hero-input {
+    height: 48px;
+    width: 100%;
+    border-radius: 5px;
+    border: none;
+    padding: 12px 20px 12px 45px;
+    margin-bottom: 10px;
+  }
+  .hero-input-btn {
+    margin: 0 auto;
+    display: flex;
+  }
+  .option-div {
+    display: flex;
+    justify-content: center;
+  }
 }
 
 /* // Small devices (landscape phones, less than 768px) */
 @media (min-width: 575.98px) and (max-width: 767.98px) {
+  .hide-sm {
+    display: none;
+  }
+  .header {
+    height: auto;
+    width: 100%;
+    background-color: #881337;
+  }
+  .hero-section {
+    margin-top: 52.5px;
+    /* margin-bottom: 66.5px; */
+    width: 100%;
+    padding-bottom: 50px;
+  }
+
+  h1 {
+    font-size: 54px !important;
+  }
+  .hero-input {
+    margin-bottom: 10px;
+  }
 }
 
 /* // Medium devices (tablets, less than 992px) */
 @media (min-width: 767.98px) and (max-width: 991.98px) {
+  .hide-md {
+    display: none;
+  }
 }
 
 /* // Large devices (desktops, less than 1200px) */
-@media (min-width: 991.98px) ) and (max-width: 1199.98px) {
+@media (min-width: 991.98px) and (max-width: 1199.98px) {
+  .hide-lg {
+    display: none;
+  }
+  .col-lg-7 {
+    width: 100% !important;
+  }
 }
 
 /* // X-Large devices (large desktops, less than 1400px) */
 @media (min-width: 1199.98px) and (max-width: 1399.98px) {
+  .hide-xl {
+    display: none;
+  }
+  .hero-img {
+    height: auto; /* Let the image maintain its aspect ratio */
+    width: 40%; /* Make the image 100% of its container width */
+    top: 100; /* Reposition the image as needed for smaller screens */
+  }
 }
 
 @media (min-width: 1399.98px) and (max-width: 2560px) {
+  .hide-xxl {
+    display: none;
+  }
+  .header {
+    height: 750px;
+    width: 100%;
+    background-color: #881337;
+  }
+  .hero-img {
+    /* Let the image maintain its aspect ratio */
+    width: 40%; /* Make the image 100% of its container width */
+    top: 100; /* Reposition the image as needed for smaller screens */
+  }
 }
