--- a/CSS/index.css
+++ b/CSS/index.css
@@ -123,7 +123,7 @@
   transition: transform 0.3s ease-in-out;
 }
 .marquee-container {
-  width: 1280px;
+  width: 100%;
   margin: 0 auto;
   overflow: hidden;
   white-space: nowrap;
@@ -152,10 +152,10 @@
 
 @keyframes marquee {
   0% {
-    transform: translateX(10%);
+    transform: translateX(100%);
   }
   100% {
-    transform: translateX(-10%);
+    transform: translateX(-100%);
   }
 }
 
