--- a/CSS/index.css
+++ b/CSS/index.css
@@ -97,6 +97,7 @@
   background-color: transparent;
   cursor: pointer;
   transition: ease 0.3s;
+  flex-wrap: nowrap;
 }
 .option-text:hover {
   background-color: white;
@@ -403,3 +404,49 @@
   width: 300px;
   height: 300px;
 } */
+
+@import url("https://fonts.googleapis.com/css?family=Muli&display=swap");
+
+* {
+  box-sizing: border-box;
+}
+
+.container-phone {
+  width: 100%;
+  display: flex;
+  padding: 0 10px;
+}
+
+.slide {
+  height: 80vh;
+  border-radius: 20px;
+  margin: 10px;
+  cursor: pointer;
+  color: #fff;
+  flex: 1;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  position: relative;
+  transition: all 0.5s ease-in-out;
+}
+
+.slide h3 {
+  position: absolute;
+  font-size: 24px;
+  bottom: 20px;
+  left: 20px;
+  margin: 0;
+  opacity: 0;
+}
+
+.slide.active {
+  flex: 10;
+}
+
+.slide.active h3 {
+  opacity: 1;
+  transition: opacity 0.3s ease-in 0.4;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000,
+    1px 1px 0 #000;
+}
