--- a/CSS/index.css
+++ b/CSS/index.css
@@ -127,11 +127,11 @@
   width: 100%;
   margin: 0 auto;
   overflow: hidden;
-  white-space: nowrap;
+  /* white-space: nowrap; */
 }
 
 .marquee {
-  display: inline-block;
+  /* display: inline-block; */
   animation: marquee 10s linear infinite;
 }
 
@@ -414,20 +414,20 @@
 .container-phone {
   width: 100%;
   display: flex;
-  padding: 0 10px;
+  /* padding: 0 10px; */
 }
 
 .slide {
   height: 80vh;
   border-radius: 20px;
-  margin: 10px;
+  margin: 3px;
   cursor: pointer;
   color: #fff;
   flex: 1;
-  background-size: cover;
+  /* background-size: cover; */
   background-position: center;
   background-repeat: no-repeat;
-  position: relative;
+  /* position: relative; */
   transition: all 0.5s ease-in-out;
 }
 
