--- a/CSS/global.css
+++ b/CSS/global.css
@@ -2,6 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Roboto", sans-serif !important;
+  font-size: 1rem;
 }
 h1 {
   font-size: 4.5rem !important;
