--- a/CSS/media.css
+++ b/CSS/media.css
@@ -19,7 +19,11 @@
     width: 100%;
     padding-bottom: 50px;
   }
-
+  .expanding-services {
+    width: 100%;
+    height: 522px;
+    padding: 10px;
+  }
   h1 {
     font-size: 40px !important;
     line-height: 40px !important;
