--- a/CSS/media.css
+++ b/CSS/media.css
@@ -54,6 +54,12 @@
   h4 {
     font-size: 1rem !important;
   }
+  .best-solution {
+    width: 100%;
+    height: auto;
+    padding: 5px;
+    background-color: #475569;
+  }
 }
 
 /* // Small devices (landscape phones, less than 768px) */
@@ -79,12 +85,24 @@
   .hero-input {
     margin-bottom: 10px;
   }
+  .best-solution {
+    width: 100%;
+    height: auto;
+    padding: 40px;
+    background-color: #475569;
+  }
 }
 
 /* // Medium devices (tablets, less than 992px) */
 @media (min-width: 767.98px) and (max-width: 991.98px) {
   .hide-md {
     display: none;
+  }
+  .best-solution {
+    width: 100%;
+    height: auto;
+    padding: 80px;
+    background-color: #475569;
   }
 }
 
@@ -95,6 +113,12 @@
   }
   .col-lg-7 {
     width: 100% !important;
+  }
+  .best-solution {
+    width: 100%;
+    height: auto;
+    padding: 80px;
+    background-color: #475569;
   }
 }
 
@@ -114,6 +138,12 @@
     overflow: hidden;
     white-space: nowrap;
   }
+  .best-solution {
+    width: 100%;
+    height: 557px;
+    padding: 80px;
+    background-color: #475569;
+  }
 }
 
 @media (min-width: 1399.98px) and (max-width: 2560px) {
@@ -129,5 +159,11 @@
     /* Let the image maintain its aspect ratio */
     width: 40%; /* Make the image 100% of its container width */
     top: 100; /* Reposition the image as needed for smaller screens */
+  }
+  .best-solution {
+    width: 100%;
+    height: 557px;
+    padding: 80px;
+    background-color: #475569;
   }
 }
