--- a/CSS/media.css
+++ b/CSS/media.css
@@ -245,6 +245,12 @@
     padding: 80px;
     background-color: #475569;
   }
+  .be-incredible {
+    height: auto;
+    width: 100%;
+    padding: 80px;
+    background-color: #475569;
+  }
 }
 
 @media (min-width: 1399.98px) and (max-width: 2560px) {
